--- a/clients/home/templates/home/base.html
+++ b/clients/home/templates/home/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="{% static 'home/images/logo.svg' %}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{% static 'home/images/virtualbank.png' %}" type="image/x-icon" />
 
     <meta charset="UTF-8" />
     <meta http-equiv="content-language" content="en-US" />
@@ -70,7 +70,7 @@
     <header class="container-fluid text-white mt-1">
       <div class="row align-items-center d-none d-md-flex">
         <div class="col-12 col-sm-auto text-center">
-          <a href="{% url 'home:homepage' %}" style="text-decoration: none;"><h1 class="logo d-flex fs-4"><img src="{% static 'home/images/logo.svg' %}" alt="logo" class="w-100" />Virtual Bank</h1></a>
+          <a href="{% url 'home:homepage' %}" style="text-decoration: none;"><h1 class="logo d-flex w-100"><img src="{% static 'home/images/virtualbanklogo.png' %}" alt="logo" class="w-100" /></h1></a>
         </div>
         <div class="col-12 col-md d-flex justify-content-center justify-content-md-end">
           <nav>
@@ -94,7 +94,7 @@
 
       <div class="row align-items-center .d-inline-flex d-md-none">
         <div class="col">
-          <h1 class="logo d-flex fs-3"><img src="{% static 'home/images/logo.svg' %}" alt="logo" class="w-100" />Virtual Bank</h1> <!-- place holder -->
+          <h1 class="logo d-flex"><img src="{% static 'home/images/virtualbanklogo.png' %}" alt="logo" class="w-100" /></h1>
         </div>
         <a data-bs-toggle="offcanvas" class="col-2 menu" href="#offcanvasMenu" role="button" aria-controls="offcanvasMenu"><!-- <img src="" alt="menu"> --></a>
 
