--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="{% static 'home/images/logo.svg' %}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{% static 'home/images/virtualbank.png' %}" type="image/x-icon" />
 
     <meta charset="UTF-8" />
     <meta http-equiv="content-language" content="en-US" />
