--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -32,7 +32,7 @@
   </form>
 </aside>
 
-<aside class="main-nav border-end d-flex flex-column align-items-center justify-content-between py-4 border-success position-fixed">
+<aside class="main-nav d-flex flex-column align-items-center justify-content-between py-4 position-fixed">
   <a href="#"><img src="{% static 'users/images/home.png' %}" alt="home" class="icon" title="home" /></a>
   <a href="#"><img src="{% static 'users/images/deposits.png' %}" alt="deposits" class="icon" title="deposits" /></a>
   <a href="#"><img src="{% static 'users/images/transfers.png' %}" alt="transfers" class="icon" title="transfers" /></a>
