Refactor API URLs, Add drf_yasg for Swagger docs, and Update README

--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -76,8 +76,8 @@
     <input type="text" class="rounded-end-pill w-100 border-none bg-transparent" /> <!-- search bar -->
   </div>
   <div class="w-15 d-flex justify-content-between align-items-center">
-    <a href="#"><img src="{% static 'users/images/developer.png' %}" alt="developer" class="icon" title="API" /></a>
-    <a href="#"><img src="{% static 'users/images/help.png' %}" alt="help" class="icon" title="help" /></a>
+    <a href="http://127.0.0.1:8000/redoc/"><img src="{% static 'users/images/developer.png' %}" alt="developer" class="icon" title="API Documentation" /></a>
+    <a href="http://127.0.0.1:8000/swagger/"><img src="{% static 'users/images/help.png' %}" alt="help" class="icon" title="help" /></a>
     <div>
       <img src="{% static 'users/images/notification.png' %}" alt="notification" class="notification-icon icon" title="notification" />
       {% if unread_count > 0 %}
