feat: add currency conversion functionality

--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -20,6 +20,7 @@
           <option value="USD">USD</option>
           <option value="EUR">EUR</option>
           <option value="GBP">GBP</option>
+          <option value="JPY">JPY</option>
           <option value="NGN" selected>NGN</option>
         </select>
       </div>
