feat: refactor transaction serializers and update WebSocket to return serialized transaction data

--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -197,5 +197,6 @@
     </div>
   </main>
   {% include 'users/includes/footer.html' %}
-  <script type="module" src="{% static 'users/scripts/dashboard.js' %}"></script>
+  <script type="module" src="{% static 'users/scripts/test.js' %}"></script>
+  <!-- <script type="module" src="{% static 'users/scripts/dashboard.js' %}"></script> -->
 {% endblock %}
