--- a/clients/users/templates/users/includes/footer.html
+++ b/clients/users/templates/users/includes/footer.html
@@ -2,4 +2,4 @@
 <footer>
 </footer>
 
-<script src="{% static 'users/scripts/headers.js' %}" type="module"></script>
+<!-- <script src="{% static 'users/scripts/headers.js' %}" type="module"></script> -->
