--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -48,8 +48,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&family=DM+Serif+Display&display=swap" rel="stylesheet" />
 
     <!-- load bootstrap -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" /> -->
-    <link rel="stylesheet" href="{% static 'utils/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <!-- <link rel="stylesheet" href="{% static 'utils/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}"> -->
 
     <!-- load css -->
     <link rel="stylesheet" href="{% static 'users/styles/main.css' %}" />
@@ -57,7 +57,6 @@
     <link rel="stylesheet" href="{% static 'users/styles/background.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/body.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/footer.css' %}" />
-    <!-- TODO: Dynamically switch between light and dark mode using js -->
 
     <!-- load chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts" defer></script>
@@ -66,7 +65,7 @@
       {% block content %}
 
       {% endblock %}
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script> -->
-    <script src="{% static 'utils/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
+    <!-- <script src="{% static 'utils/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script> -->
   </body>
 </html>
