--- a/clients/home/templates/home/base.html
+++ b/clients/home/templates/home/base.html
@@ -142,7 +142,7 @@
               <div class="">
                 <a href="https://github.com/GoldenThrust" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/github.svg' %}" alt="Github" /></a>
                 <a href="https://x.com/Goldenthrust3" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/x.svg' %}" alt="Twitter" /></a>
-                <a href="https://www.linkedin.com/in/olajide-adeniji-0286a32a2/" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/linkedin.svg' %}" alt="LinkedIn" /></a>
+                <a href="https://www.linkedin.com/in/olajide-adeniji/" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/linkedin.svg' %}" alt="LinkedIn" /></a>
                 <a href="https://www.instagram.com/imagination_purely/" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/instagram.svg' %}" alt="" /></a>
                 <a href="https://www.youtube.com/channel/UCTNcZa-UmGQJWPpz-keC2xQ" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/youtube.svg' %}" alt="Youtube" /></a>
                 <a href="https://medium.com/@adenijiolajid01" target="_blank" rel="noopener noreferrer"><img src="{% static 'home/images/socials/meduim.svg' %}" alt="Meduim" /></a>
