--- a/clients/home/templates/home/base.html
+++ b/clients/home/templates/home/base.html
@@ -46,12 +46,18 @@
 
     <!-- load font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&display=swap" rel="stylesheet" />
 
     <!-- load bootstrap -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" /> -->
-     <link rel="stylesheet" href="{% static 'utils/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+     <!-- <link rel="stylesheet" href="{% static 'utils/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}"> -->
+     
+    <!-- Expose API URL as a global variable -->
+    <script>
+      // Make API URL available to all JavaScript files
+      window.API_BASE_URL = "{{ API_URL }}";
+      window.WEBSOCKET_URL = window.API_BASE_URL.replace(/^http/, 'ws');
+    </script>
 
     <!-- load css -->
     <link rel="stylesheet" href="{% static 'home/styles/headers.css' %}" />
@@ -73,11 +79,10 @@
         <div class="col-12 col-sm-auto text-center">
           <a href="{% url 'home:homepage' %}" style="text-decoration: none;"><h1 class="logo d-flex w-100"><img src="{% static 'home/images/virtualbanklogo.png' %}" alt="logo" class="w-100" /></h1></a>
         </div>
-        <div class="col-12 col-md d-flex justify-content-center justify-content-md-end">
-          <nav>
+        <div class="col-12 col-md d-flex justify-content-center justify-content-md-end">          <nav>
             <a href="{% url 'home:about' %}" class="text-decoration-none text-white mx-2 link-secondary">About Us</a>
             <a href="#" class="text-decoration-none text-white mx-2 link-secondary">Contact Us</a>
-            <a href="http://127.0.0.1:8030/redoc/" class="text-decoration-none text-white mx-2 link-secondary">Documentation</a>
+            <a href="{{ API_URL }}/redoc/" class="text-decoration-none text-white mx-2 link-secondary">Documentation</a>
             <!-- <a href="#" class="text-decoration-none text-white mx-2 link-secondary">Guides</a> -->
           </nav>
         </div>
@@ -168,8 +173,8 @@
       </div>
     </footer>
 
-    <script src="{% static 'utils/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
+    <!-- <script src="{% static 'utils/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script> -->
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
   </body>
 </html>
